--- a/templates/project-detail.html
+++ b/templates/project-detail.html
@@ -16,7 +16,7 @@
           {{project.title}} {{project.square}}м<sup class="text__sup">2</sup>
         </h1>
         <p class="text">
-          Размеры дома: <b>{{project.dimensions}}м</b><br>
+          Размеры: <b>{{project.dimensions}}м</b><br>
           Общая площадь: <b>{{project.square}}м<sup class="text__sup">2</sup></b>
         </p>
         <p class="text">
@@ -27,10 +27,34 @@
         </picture>
       </div>
     </article>
+  </section>
 
+  <section class="grid">
     <article class="grid__article">
       <div class="grid__element grid__element--wide">
-        <p class="text text--white text--left">Хочу такую Дом-Баню</p>
+        <h2 class="heading heading--h2 heading--bold heading--paddingBottom-50">Что входит в базовый комплект<br>(тепловой контур) дома?</h2>
+        <div>
+          <ul class="text text--left list list--paddingLeft-small">
+            <li>Проектные и геодезические работы.</li>
+            <li>Устройство фундамента (свайно-забивной для базового комплекта).</li>
+            <li>Монтаж и демонтаж строительных лесов.</li>
+            <li>Монтаж стен из клееного бруса, колонн, обвязочного бруса с обработкой биозащиным составом, монтаж пружинного узла «сила» для крепления бруса между собой.</li>
+            <li>Монтаж балок перекрытий цоколя и потолка парной, с дощатым настилом по балкам, обработка балок биозащитным составом, монтаж стропильно-балочной системы.</li>
+            <li>Монтаж кровли с утеплением 200 мм, монтаж бруса поперек стропил с внутренним утеплением 50 мм, водосточной системы и снегозадержателей.</li>
+            <li>Обработка стен из бруса защитным составом снаружи (антисептик, грунт + 2 слоя покраски) и внутри (2 слоя покраски), отбеливание стен и колонн со всех сторон, шлифовка стен в 1 слой, а также шлифовка торцов с обработкой спецсоставом.</li>
+            <li>Обшивка свесов карнизов отделочной рейкой, обработка рейки защитным составом, монтаж лобовой карнизной доски.</li>
+            <li>Изготовление и монтаж обсадных коробок и блоков окон и входной двери, изготовление и монтаж видимых поверхностей доборов, наличников с обработкой защитным составом в 2 слоя.</li>
+            <li>Утепление перекрытий 200 мм и установка сетки от грызунов под полом.</li>
+          </ul>
+        </div>
+      </div>
+    </article>
+  </section>
+
+  <section class="grid">
+    <article class="grid__article">
+      <div class="grid__element grid__element--wide">
+        <h2 class="heading heading--h2 heading--bold heading--paddingBottom-50">Хочу такую Дом-Баню</h2>
         <form action="/submit/" class="form form--house" method="POST">
           <label for="" class="form__label">
             <input type="email" name="email" class="form__input" required>
@@ -49,29 +73,7 @@
           <button type="submit" class="form__submit button button--big">Позвоните мне</button>
           {% csrf_token %}
         </form>
-        <p class="text text--white text--sm">Обработка заявки осущетствляется в течение рабочего дня. Отправляя заявку вы соглашаетесь с нашей <a href="/policy/" class="text__link text__link--alt">политикой конфиденциальности</a>.</p>
-      </div>
-    </article>
-  </section>
-
-  <section class="grid">
-    <article class="grid__article">
-      <div class="grid__element grid__element--wide">
-        <h2 class="heading heading--h2 heading--paddingBottom-50">Что входит в базовый комплект (тепловой контур) дома?</h2>
-        <div>
-          <ul class="text text--left list list--paddingLeft-small">
-            <li>Проектные и геодезические работы.</li>
-            <li>Устройство фундамента (свайно-забивной для базового комплекта).</li>
-            <li>Монтаж и демонтаж строительных лесов.</li>
-            <li>Монтаж стен из клееного бруса, колонн, обвязочного бруса с обработкой биозащиным составом, монтаж пружинного узла «сила» для крепления бруса между собой.</li>
-            <li>Монтаж балок перекрытий цоколя и потолка парной, с дощатым настилом по балкам, обработка балок биозащитным составом, монтаж стропильно-балочной системы.</li>
-            <li>Монтаж кровли с утеплением 200 мм, монтаж бруса поперек стропил с внутренним утеплением 50 мм, водосточной системы и снегозадержателей.</li>
-            <li>Обработка стен из бруса защитным составом снаружи (антисептик, грунт + 2 слоя покраски) и внутри (2 слоя покраски), отбеливание стен и колонн со всех сторон, шлифовка стен в 1 слой, а также шлифовка торцов с обработкой спецсоставом.</li>
-            <li>Обшивка свесов карнизов отделочной рейкой, обработка рейки защитным составом, монтаж лобовой карнизной доски.</li>
-            <li>Изготовление и монтаж обсадных коробок и блоков окон и входной двери, изготовление и монтаж видимых поверхностей доборов, наличников с обработкой защитным составом в 2 слоя.</li>
-            <li>Утепление перекрытий 200 мм и установка сетки от грызунов под полом.</li>
-          </ul>
-        </div>
+        <p class="text text--sm">Обработка заявки осущетствляется в течение рабочего дня.<br>Отправляя заявку вы соглашаетесь с нашей <a href="/policy/" class="text__link">политикой конфиденциальности</a>.</p>
       </div>
     </article>
   </section>
