update: structure-detail, structure-index layouts and js

--- a/templates/common.html
+++ b/templates/common.html
@@ -23,6 +23,8 @@
     {% endblock content %}
   </main>
 
+  <div class="overlay"></div>
+
   {% include "footer.html" %}
 
   <script nonce="{{ CSP_NONCE }}" src="{% static 'js/burger/burger.js' %}"></script>
