--- a/templates/structure-index.html
+++ b/templates/structure-index.html
@@ -126,15 +126,36 @@
   <section id="projects-small" class="grid">
     <article class="grid__article">
       <div class="grid__element grid__element--wide">
-        <h2 class="heading heading--h2 heading--bold heading--paddingBottom-50">Проекты домов и бань до&nbsp;100м²</h2>
+        <h2 class="heading heading--h2 heading--bold heading--paddingBottom-50">Проекты домов и бань</h2>
       </div>
+    </article><article class="grid__article">
+      <div class="tabGroups grid__element grid__element--wide grid__element--marginBottom-medium">
+        <input class="tabGroups__tabInput" data-tab="#projects-less-100" id="tab1" type="radio" name="tabs" checked>
+        <input class="tabGroups__tabInput" data-tab="#projects-100-200" id="tab2" type="radio" name="tabs">
+        <input class="tabGroups__tabInput" data-tab="#projects-more-200" id="tab3" type="radio" name="tabs">
+        <input class="tabGroups__tabInput" data-tab="#projects-saunas" id="tab4" type="radio" name="tabs">
+        <div class="tabGroups__tabs">
+          <div class="tabGroups__tabs tabGroups__tabs--desktop">
+            <label id="labelTab1" class="tabGroups__label button button--bold button--alt" for="tab1">до 100м²</label>
+            <label id="labelTab2" class="tabGroups__label button button--bold button--alt" for="tab2">100 &mdash; 200м²</label>
+            <label id="labelTab3" class="tabGroups__label button button--bold button--alt" for="tab3">от 200м²</label>
+            <label id="labelTab4" class="tabGroups__label button button--bold button--alt" for="tab4">Бани</label>
+          </div>
+
+          <select class="tabGroups__select" name="tabsSelect" id="tabsSelect" value="">
+            <option selected="">до 100м²</option>
+            <option>100 &mdash; 200м²</option>
+            <option>от 200м²</option>
+            <option>Бани</option>
+          </select>
+        </div>
     </article>
-    <article class="grid__article grid__article--three">
+    <article id="projects-all" class="grid__article grid__article--three">
       {% for project in projects_list %}
-        <a class="preview grid__element--marginBottom-medium" href="{% url 'houses:project-detail' project.slug %}">
+        <a class="preview grid__element--marginBottom-medium" href="{% url 'houses:project-detail' project.slug %}" data-square="{{project.square}}" data-type="{{project.short_name}}">
           {% with 'http://'|add:request.get_host|add:project.image.url as path %}
             {% thumbnail path "357x240" crop="center" upscale=True as im %}
-              <picture class="img img--preview">
+              <picture class="img img--preview img--previewProject">
                 <img src="{{ im.url }}" alt="{{project.title}}" class="img__img preview__img">
               </picture>
             {% endthumbnail %}
@@ -147,33 +168,16 @@
     </article>
   </section>
 {% endif %}
-<!-- <div class="hr"></div>
-
-<section id="projects" class="grid">
-  <article class="grid__article">
-    <div class="grid__element grid__element--wide">
-      <h2 class="heading heading--h2 heading--bold heading--paddingBottom-50">Проекты домов и бань от&nbsp;100м²&nbsp;до&nbsp;200м²</h2>
-    </div>
-  </article>
-  <article class="grid__article grid__article--three">
-  </article>
-</section>
-
-<div class="hr"></div>
-
-<section id="projects-big" class="grid">
-  <article class="grid__article">
-    <div class="grid__element grid__element--wide">
-      <h2 class="heading heading--h2 heading--bold heading--paddingBottom-50">Проекты больших домов и бань от&nbsp;200м²</h2>
-    </div>
-  </article>
-  <article class="grid__article grid__article--three">
-  </article>
-</section> -->
 
 {% endblock content %}
 
 {% block scripts %}
 <script nonce="{{ CSP_NONCE }}" src="{% static 'js/content-slider/content-slider.js' %}"></script>
 <script nonce="{{ CSP_NONCE }}" src="{% static 'js/more.js' %}"></script>
+<script nonce="{{ CSP_NONCE }}" src="{% static 'js/tabGroups/tabGroups.js' %}"></script>
+<script>
+  if (window.location.hash) {
+    window.tabSelect(window.location.hash);
+  }
+</script>
 {% endblock scripts %}
