--- a/templates/structure-index.html
+++ b/templates/structure-index.html
@@ -38,7 +38,7 @@
         <h1 class="heading heading--h1 heading--white">Проекты небольших домов</h1>
         <p class="content-slider__text text text--white">Типовые проекты домов из клееного бруса до 100м²</p>
         <div class="promo__buttons">
-          <a href="#projects-small" class="button button--uppercase button--bold button--big">Смотреть все</a>
+          <a href="#projects-less-100" class="button button--uppercase button--bold button--big">Смотреть все</a>
         </div>
       </div>
     </article>
@@ -47,16 +47,25 @@
         <h1 class="heading heading--h1 heading--white">Проекты домов из<br>клееного бруса</h1>
         <p class="content-slider__text text text--white">Типовые проекты домов из клееного бруса от 100м² до 200м²</p>
         <div class="promo__buttons">
-          <a href="#projects" class="button button--uppercase button--bold button--big">Смотреть все</a>
+          <a href="#projects-100-200" class="button button--uppercase button--bold button--big">Смотреть все</a>
         </div>
       </div>
     </article>
     <article class="content-slider__item promo promo--half content-slider__item--saunas">
       <div class="promo__wrapper">
-        <h1 class="heading heading--h1 heading--white">Проекты  больших домов из клееного&nbsp;бруса</h1>
+        <h1 class="heading heading--h1 heading--white">Проекты больших домов из клееного&nbsp;бруса</h1>
         <p class="content-slider__text text text--white">Типовые проекты домов из клееного бруса от 200м²</p>
         <div class="promo__buttons">
-          <a href="#projects-big" class="button button--uppercase button--bold button--big">Смотреть все</a>
+          <a href="#projects-more-200" class="button button--uppercase button--bold button--big">Смотреть все</a>
+        </div>
+      </div>
+    </article>
+    <article class="content-slider__item promo promo--half content-slider__item--saunas">
+      <div class="promo__wrapper">
+        <h1 class="heading heading--h1 heading--white">Проекты бань из клееного&nbsp;бруса</h1>
+        <p class="content-slider__text text text--white">Типовые проекты бань из клееного бруса разной площади</p>
+        <div class="promo__buttons">
+          <a href="#projects-saunas" class="button button--uppercase button--bold button--big">Смотреть все</a>
         </div>
       </div>
     </article>
@@ -123,12 +132,17 @@
 {% endif %}
 
 {% if projects_list %}
+  <div id="projects-less-100" display="none"></div>
+  <div id="projects-100-200" display="none"></div>
+  <div id="projects-more-200" display="none"></div>
+  <div id="projects-saunas" display="none"></div>
   <section id="projects-small" class="grid">
     <article class="grid__article">
       <div class="grid__element grid__element--wide">
         <h2 class="heading heading--h2 heading--bold heading--paddingBottom-50">Проекты домов и бань</h2>
       </div>
-    </article><article class="grid__article">
+    </article>
+    <article class="grid__article">
       <div class="tabGroups grid__element grid__element--wide grid__element--marginBottom-medium">
         <input class="tabGroups__tabInput" data-tab="#projects-less-100" id="tab1" type="radio" name="tabs" checked>
         <input class="tabGroups__tabInput" data-tab="#projects-100-200" id="tab2" type="radio" name="tabs">
@@ -156,7 +170,7 @@
           {% with 'http://'|add:request.get_host|add:project.image.url as path %}
             {% thumbnail path "357x240" crop="center" upscale=True as im %}
               <picture class="img img--preview img--previewProject">
-                <img src="{{ im.url }}" alt="{{project.title}}" class="img__img preview__img">
+                <img src="{{ im.url }}" alt="{{project.title}}" class="img__img preview__img img__img--project">
               </picture>
             {% endthumbnail %}
           {% endwith %}
@@ -175,9 +189,4 @@
 <script nonce="{{ CSP_NONCE }}" src="{% static 'js/content-slider/content-slider.js' %}"></script>
 <script nonce="{{ CSP_NONCE }}" src="{% static 'js/more.js' %}"></script>
 <script nonce="{{ CSP_NONCE }}" src="{% static 'js/tabGroups/tabGroups.js' %}"></script>
-<script>
-  if (window.location.hash) {
-    window.tabSelect(window.location.hash);
-  }
-</script>
 {% endblock scripts %}
