update: design projects links

--- a/templates/design.html
+++ b/templates/design.html
@@ -37,7 +37,7 @@
   </article>
   <article class="grid__article grid__article--four">
     <div class="grid__element grid__element--marginBottom-medium grid__element--marginTop-medium">
-      <a class="preview preview--height100" href="/projects#projects-small">
+      <a class="preview preview--height100" href="/projects/#projects-less-100">
         {% with 'http://'|add:request.get_host|add:STATIC_URL|add:'img/desing-houses-0-100.jpg' as path %}
           {% thumbnail path "220x220" crop="center" upscale=True as im %}
             <picture class="img img__design--preview">
@@ -52,7 +52,7 @@
     </div>
 
     <div class="grid__element grid__element--marginBottom-medium grid__element--marginTop-medium">
-      <a class="preview preview--height100" href="/projects#projects-small">
+      <a class="preview preview--height100" href="/projects/#projects-100-200">
         {% with 'http://'|add:request.get_host|add:STATIC_URL|add:'img/desing-houses-100-200.jpg' as path %}
           {% thumbnail path "220x220" crop="center" upscale=True as im %}
             <picture class="img img__design--preview">
@@ -66,7 +66,7 @@
     </div>
 
     <div class="grid__element grid__element--marginBottom-medium grid__element--marginTop-medium">
-      <a class="preview preview--height100" href="/projects#projects-small">
+      <a class="preview preview--height100" href="/projects/#projects-more-200">
         {% with 'http://'|add:request.get_host|add:STATIC_URL|add:'img/desing-houses-201.jpg' as path %}
           {% thumbnail path "220x220" crop="center" upscale=True as im %}
             <picture class="img img__design--preview">
@@ -81,7 +81,7 @@
     </div>
 
     <div class="grid__element grid__element--marginBottom-medium grid__element--marginTop-medium">
-      <a class="preview preview--height100" href="/projects#projects-small">
+      <a class="preview preview--height100" href="/projects/#projects-saunas">
         {% with 'http://'|add:request.get_host|add:STATIC_URL|add:'img/desing-saunas.jpg' as path %}
           {% thumbnail path "220x220" crop="center" upscale=True as im %}
             <picture class="img img__design--preview">
