feat: add y-maps to settings, common and footer

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -2,7 +2,8 @@
 <footer class="pageFooter">
 
   <div class="pageFooter__left">
-    <iframe class="pageFooter__map" src="https://yandex.ru/map-widget/v1/?um=constructor%3A1919007e4a7f1e4dc31d236cd17e9db5523542cb267827a728b8af519d90c464&amp;source=constructor" frameborder="0" title="Карта. Дом Баня, Москва 'Конструктор', МКАД 25-й км, Выставочный дом 1.8"></iframe>
+    <!-- <iframe class="pageFooter__map" src="https://yandex.ru/map-widget/v1/?um=constructor%3A1919007e4a7f1e4dc31d236cd17e9db5523542cb267827a728b8af519d90c464&amp;source=constructor" frameborder="0" title="Карта. Дом Баня, Москва 'Конструктор', МКАД 25-й км, Выставочный дом 1.8"></iframe> -->
+    <div id="map" class="pageFooter__map"></div>
   </div>
   <div class="pageFooter__right">
     <h2 class="heading heading--h2 heading--left heading--white heading--bold">Остались вопросы?</h2>
