--- a/templates/common.html
+++ b/templates/common.html
@@ -12,6 +12,9 @@
   <link rel="stylesheet" type="text/css" href="{% static 'css/style.min.css' %}">
   {% block head %}
   {% endblock head %}
+  <script nonce="{{ CSP_NONCE }}"  src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=3bc4a693-f065-47a8-bdd4-4c7fd4d23917" type="text/javascript"></script>
+  <script nonce="{{ CSP_NONCE }}"  src="https://yandex.st/jquery/2.2.3/jquery.min.js" type="text/javascript"></script>
+  <script nonce="{{ CSP_NONCE }}" src="{% static 'js/route-panel-control.js' %}" type="text/javascript"></script>
 </head>
 
 <body class="pageBody">
