--- a/templates/common.html
+++ b/templates/common.html
@@ -14,9 +14,15 @@
   {% block head %}
   {% endblock head %}
   <!-- PRELOADS START -->
-  <link rel="preload" href="https://yastatic.net/s3/front-maps-static/maps-front-jsapi-v2-1/2.1.79-37/build/release/full-6341f0c1e121ed8c4cbf1c6d8dc350380d538a9a.js" as="script">
+	<link rel="preconnect" href="//api-maps.yandex.ru">
+	<link rel="dns-prefetch" href="//api-maps.yandex.ru">
+	<link rel="preconnect" href="//yastatic.net">
+	<link rel="dns-prefetch" href="//yastatic.net">
+	<link rel="preconnect" href="//yandex.st">
+	<link rel="dns-prefetch" href="//yandex.st">
+  <!-- <link rel="preload" href="https://yastatic.net/s3/front-maps-static/maps-front-jsapi-v2-1/2.1.79-37/build/release/full-6341f0c1e121ed8c4cbf1c6d8dc350380d538a9a.js" as="script">
   <link rel="preload" href="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=3bc4a693-f065-47a8-bdd4-4c7fd4d23917" as="script">
-  <link rel="preload" href="https://yandex.st/jquery/2.2.3/jquery.min.js" type="text/javascript" as="script">
+  <link rel="preload" href="https://yandex.st/jquery/2.2.3/jquery.min.js" type="text/javascript" as="script"> -->
   <link rel="preload" href="{% static 'js/route-panel-control.js' %}" as="script">
   <!-- PRELOADS END -->
 </head>
@@ -33,11 +39,41 @@
   <div class="overlay"></div>
 
   {% include "footer.html" %}
+  <!-- <script>
+    // const addRoutePanCtrl = (body) => {
+    //   let routePanCtrl = document.createElement(`script`);
+    //   routePanCtrl.type = `text/javascript`;
+    //   routePanCtrl.nonce = `{{ CSP_NONCE }}`;
+    //   routePanCtrl.src = `{% static 'js/route-panel-control.js' %}`;
+    //   body.appendChild(routePanCtrl);
+    // }
+    setTimeout(() => {
+      const body = document.querySelector(`body`);
+      
+      let yaMaps = document.createElement(`script`);
+      yaMaps.type = `text/javascript`;
+      yaMaps.nonce = `{{ CSP_NONCE }}`;
+      yaMaps.src = `https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=3bc4a693-f065-47a8-bdd4-4c7fd4d23917`;
+      body.appendChild(yaMaps);
+      
+      let yaStatic = document.createElement(`script`);
+      yaStatic.type = `text/javascript`;
+      yaStatic.nonce = `{{ CSP_NONCE }}`;
+      yaStatic.src = `https://yandex.st/jquery/2.2.3/jquery.min.js`;
+      body.appendChild(yaStatic);
+      
+      setTimeout(() => {
+        addRoutePanCtrl(body);
+      }, 500);
+    }, 2000);
+  </script> -->
 
-  <script nonce="{{ CSP_NONCE }}"  src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=3bc4a693-f065-47a8-bdd4-4c7fd4d23917" type="text/javascript"></script>
-  <script nonce="{{ CSP_NONCE }}"  src="https://yandex.st/jquery/2.2.3/jquery.min.js" type="text/javascript"></script>
-  <script nonce="{{ CSP_NONCE }}" src="{% static 'js/route-panel-control.js' %}" type="text/javascript"></script>
+  
   <script nonce="{{ CSP_NONCE }}" src="{% static 'js/burger/burger.js' %}"></script>
+
+  <script nonce="{{ CSP_NONCE }}"  src="https://yandex.st/jquery/2.2.3/jquery.min.js" type="text/javascript"></script>
+  <script nonce="{{ CSP_NONCE }}"  src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=3bc4a693-f065-47a8-bdd4-4c7fd4d23917" type="text/javascript"></script>
+  <script nonce="{{ CSP_NONCE }}" src="{% static 'js/route-panel-control.js' %}" type="text/javascript"></script>
 
   {% block scripts %}
   {% endblock scripts %}
