--- a/templates/structure-detail.html
+++ b/templates/structure-detail.html
@@ -103,15 +103,13 @@
 
   {% with ''|center:structure.images_count as range %}
     {% for i in range %}
-      {% with img_link='img/projects/'|add:structure.short_name|add:'/'|add:structure.short_name|add:'-'|concat:forloop.counter|add:'.jpeg' counter=forloop.counter %}
-      {{img_link}}
-      {{counter}}
+      {% with img_link='img/projects/'|add:structure.short_name|add:'/'|add:structure.short_name|add:'-'|concat:forloop.counter0|add:'.jpeg' counter=forloop.counter0 %}
 
       <a class="gallery__link" href="{% static ''|add:img_link %}">
         
         {% with 'https://'|add:request.get_host|add:STATIC_URL|add:img_link as path %}
           {% thumbnail path "357x240" crop="center" upscale=True as im %}
-            <img loading="lazy" alt="Изображение {{structure.title}} {{structure.square}}м² {{forloop.counter}}" src="{{ im.url }}" class="gallery__img" data-img-index="{{forloop.counter}}" tabindex="0" />
+            <img loading="lazy" alt="Изображение {{structure.title}} {{structure.square}}м² {{counter}}" src="{{ im.url }}" class="gallery__img" data-img-index="{{counter}}" tabindex="0" />
           {% endthumbnail %}
         {% endwith %}
       </a>
