--- a/templates/common.html
+++ b/templates/common.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -8,8 +10,15 @@
   <meta name="robots" content="noindex, nofollow" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#000000">
+  <meta name="msapplication-TileColor" content="#000000">
+  <meta name="apple-mobile-web-app-status-bar-style" content="#000000">
+  <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon_package/apple-touch-icon.png' %}">
+  <link rel="icon" href="{% static 'favicon_package/favicon.ico' %}">
+  <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon_package/favicon-32x32.png' %}">
+  <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon_package/favicon-16x16.png' %}">
+  <link rel="manifest" href="{% static 'favicon_package/site.webmanifest' %}">
+  <link rel="mask-icon" href="{% static 'favicon_package/safari-pinned-tab.svg' %}" color="#000000">
   <title>{% block title %}Дом Баня{% endblock %}</title>
-  {% load static %}
   <link rel="stylesheet" type="text/css" href="{% static 'css/style.min.css' %}">
   {% block head %}
   {% endblock head %}
