--- a/templates/index.html
+++ b/templates/index.html
@@ -20,8 +20,8 @@
         и делаем&nbsp;это&nbsp;качествено.
       </P>
       <div class="promo__buttons">
-        <a href="/projects/#houses" class="button button--uppercase button--bold button--big">дома</a>
-        <a href="/projects/#saunas" class="button button--uppercase button--bold button--big">бани</a>
+        <a href="{% url 'houses:houses_categories' %}" class="button button--uppercase button--bold button--big">дома</a>
+        <a href="{% url 'houses:sauna_categories' %}" class="button button--uppercase button--bold button--big">бани</a>
       </div>
   </article>
 </section>
