update: templates categories layout

--- a/templates/structure-index.html
+++ b/templates/structure-index.html
@@ -10,7 +10,7 @@
 
 {% block content %}
 
-<section class="content-slider content-slider--top">
+<!-- <section class="content-slider content-slider--top">
   <div class="content-slider__control content-slider__control-left"></div>
   <div class="content-slider__control content-slider__control-right"></div>
   <div class="content-slider__wrapper content-slider__wrapper--top">
@@ -70,7 +70,7 @@
       </div>
     </article>
   </div>
-</section>
+</section> -->
 
 {% include 'includes/list_houses.html' %}
 
