--- a/templates/categories.html
+++ b/templates/categories.html
@@ -10,7 +10,50 @@
 
 {% block content %}
 
-<section class="promo">
+<section class="content-slider content-slider--top">
+  <div class="content-slider__wrapper content-slider__wrapper--top">
+    
+    <article class="content-slider__item promo promo--half content-slider__item--houses">
+      <div class="promo__wrapper">
+
+        {% if saunas_list %}
+        <h1 class="heading heading--h1 heading--white">Бани из клееного бруса</h1>
+        {% else %}
+        <h1 class="heading heading--h1 heading--white">Дома из клееного бруса</h1>
+        {% endif %}
+
+        <!-- <p class="content-slider__text text text--white">Мы успешно реализовали уже {{house_count}} проектов домов из клееного бруса.</p> -->
+        
+        <div class="promo__buttons">
+          {% if categories %}
+            {% for category in categories %}
+              {% if curr_category %}
+                {% if saunas_list %}
+                  <a href="{% url 'houses:sauna_sub_list' cat_slug=curr_category.slug sub_slug=category.slug %}"
+                     class="button button--uppercase button--bold button--big">{{ category.name }}</a>
+                {% else %}
+                  <a href="{% url 'houses:houses_sub_list' cat_slug=curr_category.slug sub_slug=category.slug %}"
+                     class="button button--uppercase button--bold button--big">{{ category.name }}</a>
+                {% endif %}
+              {% else %}
+                {% if saunas_list %}
+                  <a href="{% url 'houses:sauna_sub' cat_slug=category.slug %}"
+                   class="button button--uppercase button--bold button--big">{{ category.name }}</a>
+                {% else %}
+                  <a href="{% url 'houses:houses_sub' cat_slug=category.slug %}"
+                   class="button button--uppercase button--bold button--big">{{ category.name }}</a>
+                {% endif %}
+              {% endif %}
+            {% endfor %}
+          {% endif %}
+        </div>
+      </div>
+    </article>
+    
+  </div>
+</section>
+
+<!-- <section class="promo">
   <article class="promo__wrapper">
     <h1 class="promo__heading heading heading--h1 heading--uppercase heading--white">
       Дома и бани из<br>клееного&nbsp;бруса
@@ -26,7 +69,7 @@
               {% if saunas_list %}
                 <a href="{% url 'houses:sauna_sub_list' cat_slug=curr_category.slug sub_slug=category.slug %}"
                    class="button button--uppercase button--bold button--big">{{ category.name }}</a>
-        `     {% else %}
+            {% else %}
                 <a href="{% url 'houses:houses_sub_list' cat_slug=curr_category.slug sub_slug=category.slug %}"
                    class="button button--uppercase button--bold button--big">{{ category.name }}</a>
               {% endif %}
@@ -43,14 +86,14 @@
         {% endif %}
       </div>
   </article>
-</section>
+</section> -->
 
 {% include 'includes/list_houses.html' %}
 
 {% endblock content %}
 
 {% block scripts %}
-<script nonce="{{ CSP_NONCE }}" src="{% static 'js/content-slider/content-slider.js' %}"></script>
-<script nonce="{{ CSP_NONCE }}" src="{% static 'js/more.js' %}"></script>
-<script nonce="{{ CSP_NONCE }}" src="{% static 'js/tabGroups/tabGroups.js' %}"></script>
+<!-- <script nonce="{{ CSP_NONCE }}" src="{% static 'js/content-slider/content-slider.js' %}"></script> -->
+<!-- <script nonce="{{ CSP_NONCE }}" src="{% static 'js/more.js' %}"></script> -->
+<!-- <script nonce="{{ CSP_NONCE }}" src="{% static 'js/tabGroups/tabGroups.js' %}"></script> -->
 {% endblock scripts %}
