--- a/templates/common.html
+++ b/templates/common.html
@@ -82,6 +82,7 @@
 
   
   <script nonce="{{ CSP_NONCE }}" src="{% static 'js/burger/burger.js' %}"></script>
+  <script nonce="{{ CSP_NONCE }}" src="{% static 'js/mainNav/mainNav.js' %}"></script>
 
   <script nonce="{{ CSP_NONCE }}"  src="https://yandex.st/jquery/2.2.3/jquery.min.js" type="text/javascript"></script>
   <script nonce="{{ CSP_NONCE }}"  src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=3bc4a693-f065-47a8-bdd4-4c7fd4d23917" type="text/javascript"></script>
