--- a/templates/structure-index.html
+++ b/templates/structure-index.html
@@ -3,7 +3,7 @@
 {% load thumbnail %}
 
 {% block head %}
-
+{% include 'includes/meta.html' %}
 {% endblock head%}
 
 {% block title %}Дом Баня - Наши проекты{% endblock %}
